--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="CSS/blue.css" id="colorcss">
+    <link rel="stylesheet" href="blue.css" id="colorcss">
     <link rel="icon" href="Images/profile.jpg" type="image/x-icon">
 </head>
 <body>
