--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
                         <img style="margin-top: 27px;" src="Social/Gmail.png" alt="Gmail">
                     </a>
                     <a href="https://www.linkedin.com/in/ravikumar-e-b69394216/" target="_blank">
-                        <img src="Social/Linkedin.png" alt="Linkedin">
+                        <img src="Linkedin.png" alt="Linkedin">
                     </a>
                     <a href="https://github.com/Ravikumarelumalai26" target="_blank">
-                        <img src="Social/Github.png" alt="Github">
+                        <img src="Github.png" alt="Github">
                     </a>
             </div>
 
