--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="row justify-content-between align-items-center">
                   <div class="col-md-3">
                       <div class="circle">
-                          <img src="Images//profile.jpg" alt="RAVIKUMAR E" class="img-fluid profile-image">
+                          <img src="profile.jpg" alt="RAVIKUMAR E" class="img-fluid profile-image">
                       </div>
                   </div>
                   <div class="col-md-1"></div>
